--- a/styles/styles.css
+++ b/styles/styles.css
@@ -536,6 +536,12 @@ main{
     margin: 0 1rem 0 0.5rem;
 }
 
+@media(max-height:330px){
+    .chats{
+        padding-bottom: 12%;
+    }
+}
+
 @media(max-width:770px){
     main{
         overflow: hidden;
@@ -600,14 +606,21 @@ main{
         flex-basis: 80%;
     }
     .send{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background: white;
         border-radius: 0;
+        z-index: 6;
+        padding: 0.3rem 0;
     }
     .emojis{
         flex-basis: 25%;
     }
     .send textarea{
         flex-basis: 65%;
-        padding-top: 1.5rem;
+        padding-top: 1rem;
     }
     .plane{
         padding: 0.6rem;
